--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -5,3 +5,11 @@
   justify-content: center;
   padding: 84px 120px;
 }
+
+.btn {
+  background-color: transparent;
+  border: 1px solid #3470ff;
+  border-radius: 12px;
+  padding: 12px 51px;
+  margin-top: 83px;
+}
