--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,15 +1,23 @@
 .container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 68px);
   background-image: url(../../icons/Picture-min.jpg);
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  padding-top: 436px;
+  background-size: cover;
+  background-position: center;
+  justify-content: flex-end;
 }
-
+.content {
+  max-width: 843px;
+  padding-bottom: 60px;
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
+}
 .title {
   color: #fff;
   margin-bottom: 16px;
